# python3-n4d-client

./: n4d-client  pyproject.toml  setup.py  test.py
debian/: changelog  control  copyright  rules
n4d/: __init__.py
n4d/client/: __init__.py
src/n4d/client/: __init__.py
